--- a/project_flask/templates/index.html
+++ b/project_flask/templates/index.html
@@ -11,7 +11,7 @@
 
   <body>
     <h1>San Francisco Bay Vessel Traffic</h1>
-    <div class="description">Description here, possibly in two-column Bootstrap...</div>
+    <div class="description">January, 2015.  From U.S. Coast Guard AIS data compiled by NOAA.</div>
     <div id="vis"></div>
   </body>
   <script src="static/js/main.js"></script>
