Fixing color change on hover

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -16,6 +16,10 @@ a:visited {
 	color: #fda428;
 }
 
+a:hover {
+	color: #fda428;
+}
+
 h1 {
   font-family: 'Roboto Condensed', sans-serif;
   color: #424242;
